--- a/src/index.css
+++ b/src/index.css
@@ -14,14 +14,26 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+@font-face {
+  font-family: 'Ruby';
+  src: url('../public/fonts/ruby.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.ruby-font {
+  font-family: 'Ruby';
+  src: url('../public/fonts/ruby.ttf') format('truetype');
+}
+
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
