--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  max-width: auto;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -47,3 +47,4 @@
     background-color: #f0f0f0; /* Change to your desired background color on hover */
     /* Add any other styling you want for the hover effect */
   }
+
