added contact section

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,16 @@ html {
   scroll-behavior: smooth;
 }
 
+.input{
+  border: none !important;
+}
+
+.input:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border: none !important;
+}
+
 
 @font-face {
   font-family: 'Ruby';
@@ -86,7 +96,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  
 }
 button:focus,
 button:focus-visible {
